<resources>
    <!--================ GENERAL ==================-->
    <string name="app_name">Dictionary.</string>
    <string name="action_settings">Settings</string>


    <!--================ COMPONENTS ==================-->
    <!-- Strings used for first card -->
    <string name="edt_card_hint">Enter text here..</string>
    <string name="edt_card_result_hint">Results here..</string>

    <!-- Strings used for list all words -->
    <string name="list_all_words_img_play_txt">Listen to the word button</string>


    <!--================ MENUS ==================-->
    <string name="menu_act_main_txt_definition">Definition</string>
    <string name="menu_act_main_txt_translation">Translation</string>
    <string name="menu_act_main_txt_settings">Settings</string>


    <!--================ ACTIVITIES ==================-->
    <!-- Main Activity -->
    <string name="act_main_search_txt">Search word..</string>
    <string name="act_main_txt_language">English</string>
    <string name="act_main_txt_all_words">All words</string>
    <string name="act_main_txt_search_hint">Search words</string>


    <!-- Definition Activity -->
    <string name="act_definitions_txt_tool_definition">Definitions</string>
    <string name="act_definitions_txt_definition">DEFINITIONS</string>


    <!-- Camera translation Activity -->
    <string name="act_camera_translation_txt_back">Camera</string>
    <string name="act_camera_translation_txt_found">Extracted text here …</string>


    <!-- Settings Activity -->
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="act_settings_txt_tool_settings">Settings</string>
    <string name="act_settings_txt_category_general">General</string>
    <string name="act_settings_txt_list_languages">Languages</string>
    <string name="act_settings_txt_list_dark">Dark mode</string>
    <string name="act_settings_txt_list_download_dict">Download dictionaries</string>


    <string name="act_settings_txt_category_help">Help</string>
    <string name="act_settings_txt_list_how">How to use</string>
    <string name="act_settings_txt_list_feedback">Feedback</string>
    <string name="act_settings_txt_list_about">About us</string>


    <!--================ FRAGMENT ==================-->
    <!-- Walkthrough Fragment -->
    <string name="frag_btn_next">NEXT</string>
    <string name="frag_voice_btn_finish">FINISH</string>
    <string name="frag_welcome_title">WELCOME</string>
    <string name="frag_translation_title">TRANSLATE</string>
    <string name="frag_translation_subtitle">Learn in different languages.</string>
    <string name="frag_voice_title">VOICE RECOGNITION</string>
    <string name="frag_voice_subtitle">Your voice will be my command.</string>
    <string name="frag_userguide_title">USER GUIDE</string>
    <string name="frag_userguide_subtitle">Hands on with the application</string>
    <string name="frag_main_title">HOME PAGE</string>
    <string name="frag_main_subtitle">This is the main screen</string>
    <string name="frag_query_title">SEARCH BAR</string>
    <string name="frag_query_subtitle">Use this to query for words</string>
    <string name="frag_def_title">DEFINITION PAGE</string>
    <string name="frag_def_subtitle">View the definition of your query</string>
    <string name="frag_set_title">SETTINGS</string>
    <string name="frag_set_subtitle">Access your setting page with the help of this button</string>
    <string name="frag_trans_title">TRANSLATION PAGE</string>
    <string name="frag_trans_subtitle">Swipe left of the homepage to access translation functionalities</string>
    <string name="frag_cam_title">CAMERA TRANSLATION</string>
    <string name="frag_cam_subtitle">Perform camera translation with this button</string>
    <string name="frag_tts_title">TEXT-TO-SPEECH</string>
    <string name="frag_tts_subtitle">Clicking this button will read the definitions for you</string>
    <string name="frag_voicerec_title">VOICE RECOGNITION</string>
    <string name="frag_voicerec_subtitle">Use this button for voice search or translation</string>
    <string name="frag_all_title">ALL SET TO GO</string>
    <string name="frag_all_subtitle">You are all set to use the application</string>

    <!-- Language Fragment -->
    <string name="frag_txt_eng">English</string>
    <string name="frag_txt_fr">French</string>

    <!-- Definition Fragment -->
    <string name="frag_definition_spinner_error">Choose language</string>
    <string name="frag_definition_txt_all_words">ALL WORDS</string>
    <string name="frag_definition_txt_definition_loading">Loading definitions…</string>

    <!-- Translation Fragment -->
    <string name="frag_translation_spinner_error">Choose language to translate</string>
    <string name="frag_translation_edt_hint_txt">Enter text here..</string>
    <string name="frag_translation_txt_translated">Translated text here..</string>
    <string name="frag_translation_txt_error">Sorry no text was entered..</string>
    <string name="frag_translation_txt_connec_error">No internet connection was found…</string>


</resources>