<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="GENERAL"
        app:layout="@layout/preferences_category">

        <ListPreference
            android:icon="@drawable/ic_translate_24"
            app:key="languages"
            app:title="@string/act_settings_txt_list_languages"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_dark_mode"
            app:key="sync"
            app:title="@string/act_settings_txt_list_dark" />

        <ListPreference
            android:icon="@drawable/ic_download"
            app:defaultValue="true"
            app:key="download"
            app:title="@string/act_settings_txt_list_download_dict"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


    <PreferenceCategory
        app:title="HELP"
        app:layout="@layout/preferences_category">

        <Preference
            android:icon="@drawable/ic_help"
            app:key="how"
            app:title="@string/act_settings_txt_list_how">
            <intent android:action="com.vish.apps.Dictionary.WalkthroughActivity"/>
        </Preference>

        <Preference
            android:icon="@drawable/ic_definition_24"
            android:key="feedback"
            app:title="@string/act_settings_txt_list_feedback">
        </Preference>

        <Preference
            android:icon="@drawable/ic_info"
            android:key="about"
            android:title="@string/act_settings_txt_list_about">
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>