<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.TranslateFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/frag_welcome_txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="296dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/frag_translation_title"
        android:textColor="@color/blue_text_primary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/frag_translation_txt_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/frag_translation_subtitle"
        android:textColor="@color/blue_text_secondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/frag_welcome_txt_title"
        app:layout_constraintStart_toStartOf="@+id/frag_welcome_txt_title"
        app:layout_constraintTop_toBottomOf="@+id/frag_welcome_txt_title" />

    <Button
        android:id="@+id/frag_language_btn_finish"
        android:layout_width="@dimen/frag_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:backgroundTint="@color/accent"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/frag_btn_next"
        android:textAlignment="gravity"
        android:textSize="12sp"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="@+id/frag_translation_txt_subtitle"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="@+id/frag_translation_txt_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/frag_translation_txt_subtitle" />
</androidx.constraintlayout.widget.ConstraintLayout>