<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.TranslateFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/talk"
        tools:src="@drawable/talk" />

    <TextView
        android:id="@+id/frag_welcome_txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/frag_voice_title"
        android:textColor="@color/blue_text_primary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <TextView
        android:id="@+id/frag_translation_txt_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/frag_voice_subtitle"
        android:textColor="@color/blue_text_secondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/frag_welcome_txt_title"
        app:layout_constraintStart_toStartOf="@+id/frag_welcome_txt_title"
        app:layout_constraintTop_toBottomOf="@+id/frag_welcome_txt_title" />

    <Button
        android:id="@+id/frag_language_btn_finish"
        android:layout_width="@dimen/frag_walkthrough_button_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:backgroundTint="@color/accent"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/frag_btn_next"
        android:textAlignment="gravity"
        android:textColor="@color/blue"
        android:textSize="12sp"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/frag_welcome_txt_title"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="@+id/frag_welcome_txt_title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>